add basic HTML outline

--- a/index.html
+++ b/index.html
@@ -2,16 +2,55 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title></title>
-    <meta name="description" content="">
-
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="description" content="Pizza Planet is a Family Restaurant" />
+    <title>Pizza Planet</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Wendy+One" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="site-container">
+        <header>
+            <img id="logo" src="img/logo.png" alt="Pizza Planet Logo"/>
+        </header>
 
+        <main>
+            <h1 class="visuallyhidden">Pizza Planet Style Prototype</h1>
+            <section id="color-swatches">
+                <h2 class="visuallyhidden">Color Swatches</h2>
+                <ul>
+                    <li id="color-1">&nbsp;</li><li id="color-2">
+                    &nbsp;</li><li id="color-3">
+                    &nbsp;</li><li id="color-4">
+                    &nbsp;</li><li id="color-5">
+                    &nbsp;</li>
+                </ul>
+            </section>
 
+            <section id="text-sample">
+                <h1>Heading Style</h1>
+                <h2>Sub-Heading Style</h2>
+                <h3 class="visuallyhidden">Paragraph Style</h3>
+                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel feugait nulla facilisi.</p>
+                <a href="#">This is an example of a text link</a>
+            </section>
 
-    <script src="js/main.js"></script>
+            <section>
+                <h2 class="visuallyhidden">Images</h2>
+                <img class="images" src="img/background.jpg" alt="pizza planet background"/>
+                <img class="images" src="img/alien.jpg" alt="pizza planet aliens"/>
+                <img class="images" src="img/truck.jpg" alt="pizza planet delivery truck"/>
+            </section>
+
+            <section>
+                <h2 class="visuallyhidden">Button</h2>
+                <a href="#">
+                    <img class="button" src="img/button.png" alt="pizza planet button"/>
+                </a>
+            </section>
+        </main>
+    </div>
+
 </body>
 </html>
