add site specific HTML content

--- a/index.html
+++ b/index.html
@@ -15,41 +15,38 @@
             <img id="logo" src="img/logo.png" alt="Pizza Planet Logo"/>
         </header>
 
-        <main>
-            <h1 class="visuallyhidden">Pizza Planet Style Prototype</h1>
-            <section id="color-swatches">
-                <h2 class="visuallyhidden">Color Swatches</h2>
-                <ul>
-                    <li id="color-1">&nbsp;</li><li id="color-2">
-                    &nbsp;</li><li id="color-3">
-                    &nbsp;</li><li id="color-4">
-                    &nbsp;</li><li id="color-5">
-                    &nbsp;</li>
-                </ul>
-            </section>
+        <nav>
+            <ul>
+                <li><a href="#" >Home</a></li><li>
+                <a href="#">Menu</a></li><li>
+                <a href="#">Photos</a></li>
+            </ul>
+        </nav>
 
-            <section id="text-sample">
-                <h1>Heading Style</h1>
-                <h2>Sub-Heading Style</h2>
-                <h3 class="visuallyhidden">Paragraph Style</h3>
-                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Duis autem vel feugait nulla facilisi.</p>
-                <a href="#">This is an example of a text link</a>
+        <main>
+            <h1 class="visuallyhidden">Pizza Planet Information</h1>
+
+            <section id="story">
+                <img id="story-image" src="img/background.jpg" alt="pizza planet background"/>
+                <h1>Welcome to Pizza Planet</h1>
+                <h2>Our Story</h2>
+                <p>Welcome to the colorful world of Toy Story, where pizza rules! Dine in an immersive atmosphere featuring your most loved Toy Story characters, colorfully painted wall murals, and an intergalactically awesome arcade in the dining room.</p>
+                <p>Pizza is the headliner here at Toy Story Pizza Planet; options include plain cheese, pepperoni, or a veggie pizza paired with a mixed green salad for combo meals. Individual pizzas are also an option if you don’t crave a combo, as are several deluxe meal-sized salads. Dessert options include a Mickey crisped rice treat and cookies. Two unique elements here are the game arcade in the dining area and the ability to bring home a plastic souvenir cup featuring Toy Story characters. A limited amount of outdoor seating exists but there is plentiful seating indoors</p>
+                <a href="#">Take a look at our menu!</a>
             </section>
 
             <section>
                 <h2 class="visuallyhidden">Images</h2>
-                <img class="images" src="img/background.jpg" alt="pizza planet background"/>
                 <img class="images" src="img/alien.jpg" alt="pizza planet aliens"/>
                 <img class="images" src="img/truck.jpg" alt="pizza planet delivery truck"/>
             </section>
 
-            <section>
-                <h2 class="visuallyhidden">Button</h2>
-                <a href="#">
-                    <img class="button" src="img/button.png" alt="pizza planet button"/>
-                </a>
-            </section>
         </main>
+
+        <footer>
+            <h2 class="visuallyhidden">Contact Information</h2>
+            <p id="footer-text">&copy; 2016 Pizza Planet | <a href="mailto:info@pizzaplanet.com">info@pizzaplanet.com</a> | (254)555-1212</p>
+        </footer>
     </div>
 
 </body>
