add aside HTML content

--- a/index.html
+++ b/index.html
@@ -35,11 +35,14 @@
                 <a href="#">Take a look at our menu!</a>
             </section>
 
-            <section>
-                <h2 class="visuallyhidden">Images</h2>
-                <img class="images" src="img/alien.jpg" alt="pizza planet aliens"/>
-                <img class="images" src="img/truck.jpg" alt="pizza planet delivery truck"/>
-            </section>
+            <aside>
+                <h2 class="visuallyhidden">Daily Specials</h2>
+                <h1>Daily Specials</h1>
+                <img class="images" src="img/daily-special-1.jpg" alt="pizza planet pizza"/>
+                <h2>Family 4 Pack - $29.99</h2>
+                <img class="images" src="img/daily-special-2.jpg" alt="pizza planet pizza"/>
+                <h2>Personal Meal - $9.99</h2>
+            </aside>
 
         </main>
 
