add social elements and styling

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
         <footer>
             <h2 class="visuallyhidden">Contact Information</h2>
             <p id="footer-text">&copy; 2016 Pizza Planet | <a href="mailto:info@pizzaplanet.com">info@pizzaplanet.com</a> | (254)555-1212</p>
+            <a href="http://www.twitter.com" target="_blank"><img class="social-icon" src="img/twitter.png" alt="twitter"></a>
+            <a href="http://www.facebook.com" target="_blank"><img class="social-icon" src="img/facebook.png" alt="facebook"></a>
+            <a href="http://www.instagram.com" target="_blank"><img class="social-icon" src="img/instagram.png" alt="instagram"></a>
         </footer>
     </div>
 
