change information tag to better represent content

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <main>
             <h1 class="visuallyhidden">Pizza Planet Information</h1>
 
-            <section id="story">
+            <section id="info">
                 <img id="story-image" src="img/background.jpg" alt="pizza planet background"/>
                 <h1>Welcome to Pizza Planet</h1>
                 <h2>Our Story</h2>
