add hours and location content

--- a/index.html
+++ b/index.html
@@ -32,6 +32,10 @@
                 <h2>Our Story</h2>
                 <p>Welcome to the colorful world of Toy Story, where pizza rules! Dine in an immersive atmosphere featuring your most loved Toy Story characters, colorfully painted wall murals, and an intergalactically awesome arcade in the dining room.</p>
                 <p>Pizza is the headliner here at Toy Story Pizza Planet; options include plain cheese, pepperoni, or a veggie pizza paired with a mixed green salad for combo meals. Individual pizzas are also an option if you don’t crave a combo, as are several deluxe meal-sized salads. Dessert options include a Mickey crisped rice treat and cookies. Two unique elements here are the game arcade in the dining area and the ability to bring home a plastic souvenir cup featuring Toy Story characters. A limited amount of outdoor seating exists but there is plentiful seating indoors</p>
+
+                <h2>Hours and Location</h2>
+                <p>351 S Studio Dr, Lake Buena Vista, FL 32830</p>
+                <p>Hours of operation are everyday from 9AM-7PM</p>
                 <a href="#">Take a look at our menu!</a>
             </section>
 
