--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         </header>
 
         <nav>
+            <h1 class="visuallyhidden">Navigation</h1>
             <ul>
                 <li><a href="#" >Home</a></li><li>
                 <a href="#">Menu</a></li><li>
@@ -25,7 +26,6 @@
 
         <main>
             <h1 class="visuallyhidden">Pizza Planet Information</h1>
-
             <section id="info">
                 <img id="story-image" src="img/background.jpg" alt="pizza planet background"/>
                 <h1>Welcome to Pizza Planet</h1>
@@ -40,7 +40,6 @@
             </section>
 
             <aside>
-                <h2 class="visuallyhidden">Daily Specials</h2>
                 <h1>Daily Specials</h1>
                 <img class="images" src="img/daily-special-1.jpg" alt="pizza planet pizza"/>
                 <h2>Family 4 Pack - $29.99</h2>
@@ -52,7 +51,7 @@
 
         <footer>
             <h2 class="visuallyhidden">Contact Information</h2>
-            <p id="footer-text">&copy; 2016 Pizza Planet | <a href="mailto:info@pizzaplanet.com">info@pizzaplanet.com</a> | (254)555-1212</p>
+            <p id="footer-text">&copy; 2016 Pizza Planet | <a href="mailto:info@pizzaplanet.com">info@pizzaplanet.com</a> | <a href="tel:+2545551212">(254)555-1212</a></p>
             <a href="http://www.twitter.com" target="_blank"><img class="social-icon" src="img/twitter.png" alt="twitter"></a>
             <a href="http://www.facebook.com" target="_blank"><img class="social-icon" src="img/facebook.png" alt="facebook"></a>
             <a href="http://www.instagram.com" target="_blank"><img class="social-icon" src="img/instagram.png" alt="instagram"></a>
