add happy hour content to aside

--- a/index.html
+++ b/index.html
@@ -45,6 +45,8 @@
                 <h2>Family 4 Pack - $29.99</h2>
                 <img class="images" src="img/daily-special-2.jpg" alt="pizza planet pizza"/>
                 <h2>Personal Meal - $9.99</h2>
+                <h1 class="zero-bottom">Happy Hour</h1>
+                <h2>Weekdays 4PM - 6PM<h2>
             </aside>
 
         </main>
