--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Pizza Planet</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Wendy+One" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
+    <link rel="stylesheet" href="css/slimmenu.min.css" type="text/css">
     <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
@@ -17,7 +18,7 @@
 
         <nav>
             <h1 class="visuallyhidden">Navigation</h1>
-            <ul>
+            <ul id="navigation" class="slimmenu">
                 <li><a href="#" >Home</a></li><li>
                 <a href="#">Menu</a></li><li>
                 <a href="#">Photos</a></li>
@@ -59,6 +60,8 @@
             <a href="http://www.instagram.com" target="_blank"><img class="social-icon" src="img/instagram.png" alt="instagram"></a>
         </footer>
     </div>
-
+    <script src="js/jquery-3.1.1.min.js"></script>
+    <script src="js/jquery.slimmenu.min.js"></script>
+    <script src="js/main.js"></script>
 </body>
 </html>
