add menu page html and css

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <nav>
             <h1 class="visuallyhidden">Navigation</h1>
             <ul id="navigation" class="slimmenu">
-                <li><a href="#" >Home</a></li><li>
-                <a href="#">Menu</a></li><li>
-                <a href="#">Photos</a></li>
+                <li><a href="index.html" >Home</a></li><li>
+                <a href="menu.html">Menu</a></li><li>
+                <a href="photos.html">Photos</a></li>
             </ul>
         </nav>
 
@@ -37,7 +37,7 @@
                 <h2>Hours and Location</h2>
                 <p>351 S Studio Dr, Lake Buena Vista, FL 32830</p>
                 <p>Hours of operation are everyday from 9AM-7PM</p>
-                <a href="#">Take a look at our menu!</a>
+                <a href="menu.html">Take a look at our menu!</a>
             </section>
 
             <aside>
@@ -47,7 +47,7 @@
                 <img class="images" src="img/daily-special-2.jpg" alt="pizza planet pizza"/>
                 <h2>Personal Meal - $9.99</h2>
                 <h1 class="zero-bottom">Happy Hour</h1>
-                <h2>Weekdays 4PM - 6PM<h2>
+                <h2>Weekdays 4PM - 6PM</h2>
             </aside>
 
         </main>
