--- a/menu.html
+++ b/menu.html
@@ -16,7 +16,7 @@
             <img id="logo" src="img/logo.png" alt="Pizza Planet Logo"/>
         </header>
 
-        <nav>
+        <nav id="sticker">
             <h1 class="visuallyhidden">Navigation</h1>
             <ul id="navigation" class="slimmenu">
                 <li><a href="index.html" >Home</a></li><li>
@@ -140,6 +140,7 @@
     </div>
     <script src="js/jquery-3.1.1.min.js"></script>
     <script src="js/jquery.slimmenu.min.js"></script>
+    <script src="js/jquery.sticky.js"></script>
     <script src="js/main.js"></script>
 </body>
 </html>
