add images and css styling to photo page

--- a/photos.html
+++ b/photos.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Pizza Planet is a Family Restaurant" />
-    <title>Pizza Planet</title>
+    <title>Pizza Planet | Photos</title>
     <link href="https://fonts.googleapis.com/css?family=Open+Sans|Wendy+One" rel="stylesheet">
     <link rel="stylesheet" href="css/vendor/normalize.min.css">
     <link rel="stylesheet" href="css/slimmenu.min.css" type="text/css">
@@ -26,18 +26,19 @@
         </nav>
 
         <main>
-            <h1 class="visuallyhidden">Pizza Planet Information</h1>
-            <section id="info">
-                <img id="story-image" src="img/background.jpg" alt="pizza planet background"/>
-                <h1>Welcome to Pizza Planet</h1>
-                <h2>Our Story</h2>
-                <p>Welcome to the colorful world of Toy Story, where pizza rules! Dine in an immersive atmosphere featuring your most loved Toy Story characters, colorfully painted wall murals, and an intergalactically awesome arcade in the dining room.</p>
-                <p>Pizza is the headliner here at Toy Story Pizza Planet; options include plain cheese, pepperoni, or a veggie pizza paired with a mixed green salad for combo meals. Individual pizzas are also an option if you don’t crave a combo, as are several deluxe meal-sized salads. Dessert options include a Mickey crisped rice treat and cookies. Two unique elements here are the game arcade in the dining area and the ability to bring home a plastic souvenir cup featuring Toy Story characters. A limited amount of outdoor seating exists but there is plentiful seating indoors</p>
-
-                <h2>Hours and Location</h2>
-                <p>351 S Studio Dr, Lake Buena Vista, FL 32830</p>
-                <p>Hours of operation are everyday from 9AM-7PM</p>
-                <a href="menu.html">Take a look at our menu!</a>
+            <h1 class="visuallyhidden">Images</h1>
+            <section id="photo-section">
+                <img class="images" src="img/buffalo-fries-supreme.jpg" alt="buffalo fries supreme"/>
+                <img class="images" src="img/buffalo-fries.jpg" alt="buffalo fries"/>
+                <img class="images" src="img/cheese-bread.jpg" alt="cheese bread"/>
+                <img class="images" src="img/chocolate-sticks.jpg" alt="chocolate sticks"/>
+                <img class="images" src="img/meat-pizza.jpg" alt="meat pizza"/>
+                <img class="images" src="img/planet-salad.jpg" alt="salad"/>
+                <img class="images" src="img/spaghetti.jpg" alt="spaghetti"/>
+                <img class="images" src="img/sub-sandwich.jpg" alt="sub-sandwich"/>
+                <img class="images" src="img/supreme-pizza.jpg" alt="supreme pizza"/>
+                <img class="images" src="img/taco-pizza.jpg" alt="taco pizza"/>
+                <img class="images" src="img/wings.jpg" alt="wings"/>
             </section>
 
             <aside>
