--- a/index.html
+++ b/index.html
@@ -35,9 +35,13 @@
                 <p>Pizza is the headliner here at Toy Story Pizza Planet; options include plain cheese, pepperoni, or a veggie pizza paired with a mixed green salad for combo meals. Individual pizzas are also an option if you don’t crave a combo, as are several deluxe meal-sized salads. Dessert options include a Mickey crisped rice treat and cookies. Two unique elements here are the game arcade in the dining area and the ability to bring home a plastic souvenir cup featuring Toy Story characters. A limited amount of outdoor seating exists but there is plentiful seating indoors</p>
 
                 <h2>Hours and Location</h2>
-                <p>351 S Studio Dr, Lake Buena Vista, FL 32830</p>
-                <p>Hours of operation are everyday from 9AM-7PM</p>
+                <p class="narrow-spacing">351 S Studio Dr, Lake Buena Vista, FL 32830</p>
+                <p class="narrow-spacing">Hours of operation are everyday from 9AM-7PM</p>
                 <a href="menu.html">Take a look at our menu!</a>
+
+                <h2>Reservations</h2>
+                <p class="narrow-spacing">Please call ahead for reservations, you can reach us at the following number: </p>
+                <a href="tel:+2545551212">(254)555-1212</a>
             </section>
 
             <aside>
